--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
       padding: 24px;
     }
 
+    .section {
+      background: #fff;
+      border-radius: var(--card-radius);
+      box-shadow: var(--shadow);
+      padding: 18px;
+      margin-bottom: 20px;
+    }
+    .section h2 { margin: 0 0 12px; font-size: 20px; }
+
     .controls {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -47,14 +56,11 @@
     }
     .controls button:hover { background: #0056b3; }
 
-    .section {
-      background: #fff;
-      border-radius: var(--card-radius);
-      box-shadow: var(--shadow);
-      padding: 18px;
-      margin-bottom: 20px;
+    #auth-indicator{
+      font-size: 14px;
+      color: #007bff;
+      text-align: right;
     }
-    .section h2 { margin: 0 0 12px; font-size: 20px; }
 
     #movies, #wish-list {
       display: grid;
@@ -87,43 +93,81 @@
       color: #fff;
     }
 
-    .form-wrap {
+    /* ===== Auth modal ===== */
+    .hidden { display: none; }
+
+    .auth-modal {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.45);
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      z-index: 9999;
     }
-    form {
+
+    .auth-box {
+      width: 100%;
+      max-width: 420px;
       background: #fff;
-      padding: 30px;
       border-radius: 10px;
-      box-shadow: var(--shadow);
-      width: 100%;
-      max-width: 400px;
-      box-sizing: border-box;
-      margin: 0 auto;
+      padding: 18px;
+      position: relative;
+      box-shadow: 0 6px 16px rgba(0,0,0,.2);
     }
-    form h1 { margin-top: 0; }
-    form input {
-      width: 100%;
-      padding: 15px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      box-sizing: border-box;
-      font-size: 16px;
-    }
-    form button[type="submit"] {
-      width: 100%;
-      padding: 15px;
-      background-color: #007bff;
+
+    .auth-close {
+      position: absolute;
+      top: 8px;
+      right: 10px;
       border: none;
-      border-radius: 5px;
-      color: white;
-      font-size: 18px;
+      background: transparent;
+      font-size: 22px;
       cursor: pointer;
-      transition: background-color .3s ease;
     }
-    form button[type="submit"]:hover { background-color: #0056b3; }
+
+    .auth-tabs {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 12px;
+    }
+    .auth-tabs button {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ddd;
+      background: #f7f7f7;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    .auth-tabs .active {
+      background: #007bff;
+      color: #fff;
+      border-color: #007bff;
+    }
+
+    .auth-form input {
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+    .auth-form button {
+      width: 100%;
+      padding: 12px;
+      background: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .auth-form button:hover { background: #0056b3; }
+
+    .auth-msg {
+      margin: 8px 0 0;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -140,6 +184,9 @@
 
         <button id="btn-show-all">Show All</button>
         <button id="btn-show-wish">Show Wish List</button>
+
+        <button id="btn-auth">Login</button>
+        <span id="auth-indicator"></span>
       </div>
     </section>
 
@@ -148,19 +195,34 @@
       <div id="movies"></div>
     </section>
 
-    <section class="section form-wrap">
-      <form id="RegisterForm">
-        <h1>Register</h1>
-       
-        <input type="text"     name="name"     id="name"     placeholder="Name"     required>
-        <input type="email"    name="email"    id="email"    placeholder="Email"    required>
-        <input type="password" name="password" id="password" placeholder="Password" required minlength="6">
-        <input type="number"   name="age"      id="age"      placeholder="Age"      required min="18" max="100">
-        <button type="submit">Register</button>
-      </form>
-    </section>
-
   </main>
+
+  <!-- Auth Modal -->
+  <div id="auth-modal" class="auth-modal hidden">
+    <div class="auth-box">
+      <button id="auth-close" class="auth-close">&times;</button>
+
+      <div class="auth-tabs">
+        <button id="tab-register" class="active">Register</button>
+        <button id="tab-login">Login</button>
+      </div>
+
+      <form id="register-form" class="auth-form">
+        <input id="reg-username" type="text" placeholder="User name" required />
+        <input id="reg-email" type="email" placeholder="Email" required />
+        <input id="reg-password" type="password" placeholder="Password" required minlength="6" />
+        <button type="submit">Register</button>
+        <p id="reg-msg" class="auth-msg"></p>
+      </form>
+
+      <form id="login-form" class="auth-form hidden">
+        <input id="login-email" type="email" placeholder="Email" required />
+        <input id="login-password" type="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+        <p id="login-msg" class="auth-msg"></p>
+      </form>
+    </div>
+  </div>
 
   <script type="module" src="./scripts/functions.js"></script>
   <script type="module" src="./scripts/index.js"></script>
