--- a/wishList.html
+++ b/wishList.html
@@ -2,52 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wish List</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      color: #222;
-    }
-    .page {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 24px;
-    }
-    .section {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,.08);
-      padding: 18px;
-      margin-bottom: 20px;
-    }
-    #wish-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-      gap: 12px;
-    }
-    .movie-card {
-      border: 1px solid #eee;
-      border-radius: 10px;
-      padding: 12px;
-      background: #fff;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-    .movie-card h3 { margin: 0; font-size: 18px; }
-    .movie-card p  { margin: 0; color: #555; font-size: 14px; }
-  </style>
+
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
   <main class="page">
+
     <section class="section">
-      <h2>Wish List</h2>
+      <div class="wish-header">
+        <div>
+          <h1 class="wish-title">My Wish List</h1>
+          <p class="wish-subtitle">
+            All the movies you saved for later.
+          </p>
+        </div>
+  
+        <span id="wish-count" class="wish-count-pill">
+          0 movies
+        </span>
+      </div>
+    </section>
+  
+    <section class="section">
+      <h2>Wish List Movies</h2>
+  
+      <div id="wish-empty" class="empty-state hidden">
+        <h3>Your wish list is empty</h3>
+        <p>
+          Browse the movies page and add some favorites to your list.
+        </p>
+        <button class="btn-primary" onclick="window.location.href='index.html'">
+          Browse Movies
+        </button>
+      </div>
+  
       <div id="wish-list"></div>
     </section>
-  </main>
+  
+    <section class="section">
+      <button class="btn-outline" onclick="window.location.href='index.html'">
+        Back to Movies
+      </button>
+    </section>
+  
+  </main>  
 
   <script type="module" src="./scripts/functions.js"></script>
   <script type="module" src="./scripts/wishList.js"></script>
